--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "a2wsgi>=1.10.10",
+    "fastapi[standard]>=0.119.1",
+    "uvicorn>=0.38.0",
+]
